v0.0.1/modules/schema/pages/class/DINStandard.adoc
= `DINStandard`
:toclevels: 4


+++Standard published by DIN (German Institute of Standards).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:DINStandard`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`DINStandard`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<standardEdition,`standardEdition`>>
| 0..1
| xref::enumeration/DINStandardEditionKind.adoc[`DINStandardEditionKind`]
| +++Edition of DIN standard.+++

| <<standardNumber,`standardNumber`>>
| 0..1
| xref::enumeration/DINStandardKind.adoc[`DINStandardKind`]
| +++DIN standard number.+++
|===

'''


//[discrete]
[#standardEdition]
=== `standardEdition`
+++Edition of DIN standard.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DINStandard.standardEdition`
| Cardinality
| 0..1
| Type
| xref::enumeration/DINStandardEditionKind.adoc[`DINStandardEditionKind`]


|===

//[discrete]
[#standardNumber]
=== `standardNumber`
+++DIN standard number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DINStandard.standardNumber`
| Cardinality
| 0..1
| Type
| xref::enumeration/DINStandardKind.adoc[`DINStandardKind`]


|===


