v1.1.0/modules/schema/pages/class/DINStandard.adoc
= `DINStandard`
:toclevels: 4


+++Standard published by DIN (German Institute of Standards).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:DINStandard`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`DINStandard`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<standardEdition,`standardEdition`>>
//| [[slots_table.standardEdition]]<<standardEdition,`standardEdition`>>
| 0..1 +
xref::enumeration/DINStandardEditionKind.adoc[`DINStandardEditionKind`]
| +++Edition of DIN standard.+++
| _n/a_

| <<standardNumber,`standardNumber`>>
//| [[slots_table.standardNumber]]<<standardNumber,`standardNumber`>>
| 0..1 +
xref::enumeration/DINStandardKind.adoc[`DINStandardKind`]
| +++DIN standard number.+++
| _n/a_
|===

'''


//[discrete]
[#standardEdition]
=== `standardEdition`
+++Edition of DIN standard.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DINStandard.standardEdition`
| Cardinality
| 0..1
| Type
| xref::enumeration/DINStandardEditionKind.adoc[`DINStandardEditionKind`]


|===

////
[.text-left]
--
<<slots_table.standardEdition,&#10548;>>
--
////


//[discrete]
[#standardNumber]
=== `standardNumber`
+++DIN standard number.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DINStandard.standardNumber`
| Cardinality
| 0..1
| Type
| xref::enumeration/DINStandardKind.adoc[`DINStandardKind`]


|===

////
[.text-left]
--
<<slots_table.standardNumber,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/TestStandard.adoc[`TestStandard`] | xref::class/TestStandard.adoc#testStandardDIN[`testStandardDIN`]


|===

